Embed Youtube video working

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
        This is my amazing footer
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- INCLUDE REQUIRED THIRD PARTY LIBRARY JAVASCRIPT AND CSS -->
     <script src="http://code.angularjs.org/1.2.11/angular.min.js"></script>
     <script src="http://code.angularjs.org/1.2.11/angular-animate.min.js"></script>
