--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <div class="col-xs-6">
                     <nav>
                     <ul class="nav nav-pills pull-right">
-                        <li class="active"><a href="#movies"><span class="glyphicon glyphicon-home"></span> HOME</a></li>
-                        <li><a href="#shop"><span class="glyphicon glyphicon-shopping-cart"></span> SHOP</a></li>
-                        <li><a href="#about"><span class="glyphicon glyphicon-info-sign"></span> ABOUT</a></li>
+                        <li class="movies"><a href="#movies"><span class="glyphicon glyphicon-home"></span> HOME</a></li>
+                        <li class="shop"><a href="#shop"><span class="glyphicon glyphicon-shopping-cart"></span> SHOP</a></li>
+                        <li class="about"><a href="#about"><span class="glyphicon glyphicon-info-sign"></span> ABOUT</a></li>
                     </ul>
                 </nav>
                 </div>
