lots of changes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     <script src="http://code.angularjs.org/1.2.11/angular-animate.min.js"></script>
     <script src="http://code.angularjs.org/1.2.11/angular-route.js"></script>
     <!-- INCLUDE APPLICATION SPECIFIC CSS AND JAVASCRIPT -->
-    <script src="js/tv-premieres-app/app.js"></script>
+    <script src="js/tv-premieres-app/routers/app.js"></script>
+    <script src="js/tv-premieres-app/filters/filter.js"></script>
     <script src="js/tv-premieres-app/controllers/mainController.js"></script>
     <script>
         $(function () {
